--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -564,11 +564,19 @@
    "outputs": [],
    "source": [
     "### 1.3 Implicit priors (continued)\n",
+    "\n",
     "a = np.linspace(-5, 5, 1000)\n",
+    "f, ax = plt.subplots(2, len(priors))\n",
+    "f.set_figheight(10)\n",
+    "f.set_figwidth(20)\n",
     "\n",
-    "phis = np.stack((phi_0(a), phi_1(a), phi_2(a), phi_3(a)), axis=1)\n",
-    "\n",
-    "plot_histograms(phis.T, title=\"phi\")"
+    "for i in range(len(priors)): \n",
+    "    ax[0, i].plot(a, activation_functions[i](a), label = 'Activation')\n",
+    "    ax[1, i].plot(a, priors[i](a), label = 'Prior')\n",
+    "    ax[0, i].legend()\n",
+    "    ax[1, i].legend()\n",
+    "    ax[0, i].set_title(f'Activation phi_{i}')\n",
+    "    ax[1, i].set_title(f'Prior p_{i}')"
    ]
   },
   {
@@ -611,8 +619,18 @@
    "source": [
     "### 1.4 Whitening\n",
     "def whiten(X):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    \n",
+    "    # Center the data\n",
+    "    mean_X = np.mean(X, axis = 1, keepdims=True)\n",
+    "    X -= mean_X\n",
+    "    \n",
+    "    # Normalizes the covariance\n",
+    "    lambd, Phi = np.linalg.eig(np.cov(X))\n",
+    "    Lambd = np.diag(np.power(lambd, -1/2)) # put eigen values in the main diagonal\n",
+    "    A_w = Phi @ Lambd\n",
+    "    X_white = A_w.T @ X\n",
+    "    \n",
+    "    return X_white"
    ]
   },
   {
@@ -680,13 +698,28 @@
      "points": 5,
      "schema_version": 3,
      "solution": true
-    }
+    },
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "### 1.5 Interpret results of whitening\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "def generate_figure(A, title = 'Signals'):\n",
+    "    f, ax = plt.subplots(5, 5)\n",
+    "    f.set_figheight(15)\n",
+    "    f.set_figwidth(15)\n",
+    "    for i in range(5):\n",
+    "        for j in range(5):\n",
+    "            ax[i,j].set_title(f'{title} {i} and {j}')\n",
+    "            ax[i,j].scatter(A[i], A[j])\n",
+    "            ax[i,j].set_xticks([0])\n",
+    "            ax[i,j].set_yticks([0])\n",
+    "    plt.suptitle(title)\n",
+    "\n",
+    "generate_figure(S, 'Signals')\n",
+    "generate_figure(X, 'Measurements')\n",
+    "generate_figure(Xw, 'Whitened')"
    ]
   },
   {
