Finished 1.4 and 1.5 :white_check_mark:

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -698,28 +698,46 @@
      "points": 5,
      "schema_version": 3,
      "solution": true
-    },
-    "scrolled": false
+    }
    },
    "outputs": [],
    "source": [
     "### 1.5 Interpret results of whitening\n",
     "\n",
-    "def generate_figure(A, title = 'Signals'):\n",
+    "def plot_data(data, title = ''):\n",
     "    f, ax = plt.subplots(5, 5)\n",
     "    f.set_figheight(15)\n",
     "    f.set_figwidth(15)\n",
     "    for i in range(5):\n",
     "        for j in range(5):\n",
-    "            ax[i,j].set_title(f'{title} {i} and {j}')\n",
-    "            ax[i,j].scatter(A[i], A[j])\n",
+    "            ax[i,j].set_title(f'{title} {i} x {j}')\n",
+    "            ax[i,j].scatter(data[i], data[j])\n",
     "            ax[i,j].set_xticks([0])\n",
     "            ax[i,j].set_yticks([0])\n",
     "    plt.suptitle(title)\n",
+    "    plt.show()\n",
     "\n",
-    "generate_figure(S, 'Signals')\n",
-    "generate_figure(X, 'Measurements')\n",
-    "generate_figure(Xw, 'Whitened')"
+    "# Plot data.\n",
+    "plot_data(S, 'Signals')\n",
+    "plot_data(X, 'Measurements')\n",
+    "plot_data(Xw, 'Whitened')\n",
+    "\n",
+    "\n",
+    "# Plot covariance\n",
+    "f, (ax_s, ax_m, ax_w) = plt.subplots(1, 3)\n",
+    "f.set_figheight(6)\n",
+    "f.set_figwidth(20)\n",
+    "\n",
+    "ax_s.set_title(\"Signal Covariance\")\n",
+    "ax_s.imshow(np.cov(S), cmap='gray', interpolation='nearest')\n",
+    "\n",
+    "ax_m.set_title(\"Measurements Covariance\")\n",
+    "ax_m.imshow(np.cov(X), cmap='gray', interpolation='nearest')\n",
+    "\n",
+    "ax_w.set_title(\"White Measurements Covariance\")\n",
+    "ax_w.imshow(np.cov(Xw), cmap='gray', interpolation='nearest')\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -757,7 +775,9 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "The Whitened Measurements are uncorrelated, because the covariance is the identity matrix. However we cannot conclude they are independent. In other words, $\\Sigma = I$ is a necessary condition, but it is not sufficient.\n",
+    "\n",
+    "The covariance matrix of the Signals and of the Measurements show correlations. The whitening process was successful in ereasing this correlation."
    ]
   },
   {
