--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -496,7 +496,23 @@
     "    return -6*a / (a**2 + 5)\n",
     "\n",
     "def p_3(a):\n",
-    "    return 1 / (a**2 + 5)**3"
+    "    return 1 / (a**2 + 5)**3\n",
+    "\n",
+    "# # For fun: how does ReLU compares to the other activation fucntions?\n",
+    "# # Answer: It sucks! \n",
+    "\n",
+    "# def phi_4(a):\n",
+    "#     return np.maximum(a, 0)\n",
+    "\n",
+    "# def p_4(a):\n",
+    "#     return np.maximum(a**2, 0)\n",
+    "    \n",
+    "# activation_functions = [phi_0, phi_1, phi_2, phi_3, phi_4]\n",
+    "# priors = [p_0, p_1, p_2, p_3, p_4]\n",
+    "\n",
+    "# a = np.linspace(-5, 5, 1000)\n",
+    "# for prior in priors:\n",
+    "#     assert prior(a).shape == (1000, ), \"Wrong output shape\""
    ]
   },
   {
@@ -698,7 +714,8 @@
      "points": 5,
      "schema_version": 3,
      "solution": true
-    }
+    },
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -848,17 +865,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "W, _ = np.linalg.qr(random_nonsingular_matrix(Xw.shape[0]))\n",
-    "grad = W * 1000\n",
-    "grad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -884,7 +890,7 @@
     "    \n",
     "    if learning_rate >= 1:\n",
     "        # Learning rates that are too large are discounted exponentialy\n",
-    "        discount_factor = .3  # Magic number fount to work well\n",
+    "        discount_factor = .9995  # Magic number fount to work well      \n",
     "    else:\n",
     "        # Small learning rates won't be discounted\n",
     "        discount_factor = 1.0\n",
@@ -904,7 +910,7 @@
     "        grad = W + z @ x_prime.T / x_prime.shape[1] # Blac magic to make the algo converge!\n",
     "        \n",
     "        # Update W\n",
-    "        W = learning_rate * grad\n",
+    "        W += learning_rate * grad\n",
     "        \n",
     "        # Check for the converging criterial\n",
     "        if  np.linalg.norm(grad) < 1e-5:\n",
@@ -919,7 +925,7 @@
     "    return W\n",
     "\n",
     "lr = .25\n",
-    "W_est = ICA(Xw, phi_0, learning_rate=lr)  # Whiened measuement\n",
+    "W_est = ICA(Xw, phi_0, learning_rate=lr)  # Whitened measuement\n",
     "W_est = ICA(X, phi_0, learning_rate=lr)   # raw measuerement\n",
     "W_est = ICA(Xw, phi_1, learning_rate=lr)  \n",
     "W_est = ICA(X, phi_1, learning_rate=lr)\n",
@@ -996,17 +1002,24 @@
    "source": [
     "# 1.8 Experiments\n",
     "\n",
-    "lr = 1.5  # Whitened data is faster to converge and ore stable even at absurd learning rates.\n",
     "\n",
-    "for act_func in activation_functions:\n",
-    "    print(f\"Phi {i}: De-mixed for whitened data\")\n",
-    "    W = ICA(Xw, act_func, learning_rate=lr)\n",
-    "    plot_signals(W @ Xw, f\"Phi {i}: De-mixed for whitened data\")\n",
+    "def run_experiments(X_data, activation_functions, lr=0.25, title='', plot=True):\n",
+    "\n",
+    "    for i, act_func in enumerate(activation_functions):\n",
+    "        W = ICA(X_data, act_func, learning_rate=lr, print_result=plot)\n",
+    "        if plot:\n",
+    "            print(f\"Phi {i}: {title}\")\n",
+    "            plot_signals(W @ Xw, f\"Phi {i}: {title}\")\n",
     "    \n",
-    "    print(f\"Phi {i}: De-mixed for raw data\")\n",
-    "    W = ICA(X, act_func, learning_rate=lr)\n",
-    "    plot_signals(W @ X, f\"Phi {i}: De-mixed for raw data\")\n",
-    "\n"
+    "\n",
+    "lr =.25\n",
+    "# Experiments on white data\n",
+    "print(\"################# White Data #################\")\n",
+    "run_experiments(Xw, activation_functions, lr=lr, title=\"De-mixed for whitened data\")\n",
+    "\n",
+    "# Experiments on raw data\n",
+    "print(\"################# Raw Data #################\")\n",
+    "run_experiments(X, activation_functions, lr=lr, title=\"De-mixed for raw data\")"
    ]
   },
   {
@@ -1026,10 +1039,36 @@
    },
    "outputs": [],
    "source": [
+    "import time\n",
     "def does_whitening_make_a_difference():\n",
     "    # Does it make a difference (in terms of speed of convergence) \n",
     "    # if you whiten your data before running ICA?\n",
-    "    return True"
+    "    lr=.25\n",
+    "    \n",
+    "    # Time needed for white data\n",
+    "    white_start = time.time()\n",
+    "    run_experiments(Xw, activation_functions, lr=lr, title=\"De-mixed for whitened data\", plot=False)\n",
+    "    white_time = time.time() - white_start\n",
+    "    \n",
+    "    # Time needed for raw data\n",
+    "    raw_start = time.time()\n",
+    "    run_experiments(Xw, activation_functions, lr=lr, title=\"De-mixed for raw data\", plot=False)\n",
+    "    raw_time = time.time() - raw_start\n",
+    "    \n",
+    "    return white_time < raw_time\n",
+    "\n",
+    "a = does_whitening_make_a_difference()\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "time.time()"
    ]
   },
   {
@@ -1187,8 +1226,7 @@
     "    W = ICA(Xw, act_func, learning_rate=lr)\n",
     "    W_estimates_audio.append(W)\n",
     "    play_signals(W @ Xw , sample_rate, f\"Phi {i} de-mixed\")\n",
-    "    plot_signals(W @ Xw, f\"Phi {i} de-mixed\")\n",
-    "    print(f\"Phi {i}: diff = {np.sum(W @ Xw - Sw)}\")"
+    "    plot_signals(W @ Xw, f\"Phi {i} de-mixed\")"
    ]
   },
   {
@@ -1226,7 +1264,9 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "The sourcse were quite well reconvered by using the activation functions $\\phi_0$ and $\\phi_3$. It is even hard to distinguish between the recovered audio and the original one.\n",
+    "\n",
+    "The other thwo activation functions did not perform that well. The recovered audios are still quite mixed, so much so it is hard to point the recovered audios to the original ones."
    ]
   },
   {
