--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -396,7 +396,7 @@
     "\n",
     "$p_0(a) \\propto \\exp(- \\int tanh(a) da) = \\exp(-\\ln(cosh(a)) = \\frac{1}{cosh(a)}$\n",
     "\n",
-    "$p_1(a) \\propto \\exp(\\int (-a + tanh(a))da) = \\exp(cosh(a) - \\frac{a^2}{2}) = cosh(a) - \\exp(\\frac{a^2}{2})$\n",
+    "$p_1(a) \\propto \\exp(\\int (-a + tanh(a))da) = \\exp(cosh(a) - \\frac{a^2}{2}) = cosh(a) \\exp(\\frac{a^2}{2})$\n",
     "\n",
     "$p_2(a) \\propto \\exp(-\\int a^3) = \\exp(- \\frac{a^4}{4})$\n",
     "\n",
@@ -448,7 +448,7 @@
     "    return -a + np.tanh(a)\n",
     "\n",
     "def p_1(a):\n",
-    "    return np.cosh(a) - np.exp((a**2) / 2)"
+    "    return np.cosh(a) * np.exp(-(a**2) / 2)"
    ]
   },
   {
@@ -499,7 +499,7 @@
     "    return 1 / (a**2 + 5)**3\n",
     "\n",
     "# # For fun: how does ReLU compares to the other activation fucntions?\n",
-    "# # Answer: It sucks! \n",
+    "# # Answer: It sucks! Though, the prior isn't a valid distribution.\n",
     "\n",
     "# def phi_4(a):\n",
     "#     return np.maximum(a, 0)\n",
@@ -1315,7 +1315,47 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "All priors are centered in zero, thus $\\mu = 0$. Which makes the calculations easier.\n",
+    "\n",
+    "First we have to calculate the normalizing constants of each prior:\n",
+    "\n",
+    "$c_0 = \\int_{-\\infty}^{\\infty} p_0(x) dx = \\int_{-\\infty}^{\\infty} \\frac{1}{cosh(x)} dx = \\pi \\approx 3.14$\n",
+    "\n",
+    "$c_1 = \\int_{-\\infty}^{\\infty} p_1(x) dx = \\int_{-\\infty}^{\\infty} (cosh(x)exp(-\\frac{x^2}{2})) dx = \\sqrt{2 e \\pi} \\approx  4.13$\n",
+    "\n",
+    "$c_2 = \\int_{-\\infty}^{\\infty} p_2(x) dx = \\int_{-\\infty}^{\\infty} exp(-\\frac{x^4}{4}) dx = \\frac{\\Gamma(\\frac{1}{4})}{\\sqrt{2}} \\approx 2.56$\n",
+    "\n",
+    "$c_3 = \\int_{-\\infty}^{\\infty} p_3(x) dx = \\int_{-\\infty}^{\\infty} \\frac{1}{(x^2 + 3)^3} dx = \\frac{\\pi}{24 \\sqrt{3}} \\approx 0.0075$\n",
+    "\n",
+    "Now we calculate the $\\sigma^4$ of each prior:\n",
+    "\n",
+    "$\\sigma_0^4 = \\mathcal{E}[(x^2)]^2 =  \\left( \\int_{-\\infty}^{\\infty} p_0(x)x^2 dx \\right)^2  = \\left( \\frac{1}{\\pi} \\int_{-\\infty}^{\\infty} \\frac{x^2}{cosh(x)} dx \\right)^2   = \\frac{\\pi^4}{16} \\approx 6.08$\n",
+    "\n",
+    "$\\sigma_1^4 = \\mathcal{E}[(x^2)]^2 =  \\left( \\int_{-\\infty}^{\\infty} p_1(x)x^2 dx \\right)^2  = \\left( \\frac{1}{\\sqrt{2 e \\pi}} \\int_{-\\infty}^{\\infty} (cosh(x)exp(-\\frac{x^2}{2}))x^2 dx \\right)^2   = 4$\n",
+    "\n",
+    "$\\sigma_2^4 = \\mathcal{E}[(x^2)]^2 =  \\left( \\int_{-\\infty}^{\\infty} p_2(x)x^2 dx \\right)^2  = \\left( \\frac{1}{\\frac{\\Gamma(\\frac{1}{4})}{\\sqrt{2}}} \\int_{-\\infty}^{\\infty} exp(-\\frac{x^4}{4})x^2 dx \\right)^2 = 4 \\frac{\\Gamma(\\frac{3}{4})^2}{\\Gamma(\\frac{1}{4})^2} \\approx 0.45$\n",
+    "\n",
+    "$\\sigma_3^4 = \\mathcal{E}[(x^2)]^2 =  \\left( \\int_{-\\infty}^{\\infty} p_3(x)x^2 dx \\right)^2  = \\left( \\frac{1}{\\frac{\\pi}{24 \\sqrt{3}}} \\int_{-\\infty}^{\\infty} \\frac{x^2}{(x^2 + 3)^3} dx \\right)^2 = 1 $\n",
+    "\n",
+    "The last piece of the puzzle $\\mu4$ is calculated for each prior:\n",
+    "\n",
+    "$\\mu4_0 = \\mathcal{E}[(x^4)] =  \\left( \\int_{-\\infty}^{\\infty} p_0(x)x^4 dx \\right)^2  =\\frac{1}{\\pi}  \\int_{-\\infty}^{\\infty} \\frac{x^4}{cosh(x)} dx  = \\frac{5\\pi^4}{16}  \\approx 30.44$\n",
+    "\n",
+    "$\\mu4_1 = \\mathcal{E}[(x^4)] =  \\left( \\int_{-\\infty}^{\\infty} p_1(x)x^4 dx \\right)^2  = \\frac{1}{\\sqrt{2 e \\pi}} \\int_{-\\infty}^{\\infty} (cosh(x)exp(-\\frac{x^2}{2}))x^4 dx  = 10 $\n",
+    "\n",
+    "$\\mu4_2 = \\mathcal{E}[(x^4)] =  \\left( \\int_{-\\infty}^{\\infty} p_2(x)x^4 dx \\right)^2  = \\frac{1}{\\frac{\\Gamma(\\frac{1}{4})}{\\sqrt{2}}} \\int_{-\\infty}^{\\infty} exp(-\\frac{x^4}{4})x^4 dx  = 1$\n",
+    "\n",
+    "$\\mu4_3 = \\mathcal{E}[(x^4)] =  \\left( \\int_{-\\infty}^{\\infty} p_3(x)x^4 dx \\right)^2  = \\frac{1}{\\frac{\\pi}{24 \\sqrt{3}}} \\int_{-\\infty}^{\\infty}  \\frac{x^4}{(x^2 + 3)^3} dx  = 9$\n",
+    "\n",
+    "Finally, we can calculate the Kurtosis:\n",
+    "\n",
+    "$K_0 = \\frac{\\mu4_0}{\\sigma_0^4 } - 3 =  \\frac{\\frac{5\\pi^4}{16}}{\\frac{\\pi^4}{16}} - 3 = 2 $\n",
+    "\n",
+    "$K_1 = \\frac{\\mu4_1}{\\sigma_1^4 } - 3 =  \\frac{10}{4} - 3 = -0.5$\n",
+    "\n",
+    "$K_2 = \\frac{\\mu4_2}{\\sigma_2^4 } - 3 =  \\frac{1}{4 \\frac{\\Gamma(\\frac{3}{4})^2}{\\Gamma(\\frac{1}{4})^2}} - 3 \\approx -0.81$\n",
+    "\n",
+    "$K_3 = \\frac{\\mu4_3}{\\sigma_3^4 } - 3 =  \\frac{9}{1} - 3 =6$"
    ]
   },
   {
@@ -1338,10 +1378,9 @@
     "### Include your answer here (you can use math.gamma if needed)\n",
     "def get_kurtosis():\n",
     "    # Return a list with 4 numbers / expressions\n",
-    "    # return [0, 0, 0, 0]\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    Ks = [2, -.5, np.power(math.gamma(1/4), 2)/(np.power(math.gamma(3/4), 2) * 4) - 3, 6]\n",
+    "    return Ks\n",
     "    "
    ]
   },
@@ -1410,8 +1449,23 @@
    "outputs": [],
    "source": [
     "### 1.10.2 Excess Kurtosis\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "from scipy.stats import kurtosis\n",
+    "\n",
+    "kurts_dummy = []\n",
+    "kurts_audio = []\n",
+    "for i, act_func in enumerate(activation_functions):\n",
+    "    \n",
+    "    # Retrieve signals\n",
+    "    signals_dummy = W_estimates[i] @ Xw\n",
+    "    signals_audio = W_estimates_audio[i] @ Xw\n",
+    "    \n",
+    "    # Calculates the Kurtosis\n",
+    "    kurts_dummy.append(kurtosis(signals_dummy, fisher=True, axis=1))\n",
+    "    kurts_audio.append(kurtosis(signals_audio, fisher=True, axis=1))\n",
+    "\n",
+    "print(f\"Dummy: {kurts_dummy}\")\n",
+    "print(f\"Audio: {kurts_audio}\")"
    ]
   },
   {
@@ -1430,7 +1484,7 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "YOUR ANSWER HERE Not really!\n"
    ]
   }
  ],
