--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -499,13 +499,14 @@
     "    return 1 / (a**2 + 5)**3\n",
     "\n",
     "# # For fun: how does ReLU compares to the other activation fucntions?\n",
-    "# # Answer: It sucks! Though, the prior isn't a valid distribution.\n",
+    "# # Answer: It sucks! \n",
+    "# # Theory of why it does not work\n",
     "\n",
     "# def phi_4(a):\n",
     "#     return np.maximum(a, 0)\n",
     "\n",
     "# def p_4(a):\n",
-    "#     return np.maximum(a**2, 0)\n",
+    "#     return np.maximum(a, 0)**2\n",
     "    \n",
     "# activation_functions = [phi_0, phi_1, phi_2, phi_3, phi_4]\n",
     "# priors = [p_0, p_1, p_2, p_3, p_4]\n",
@@ -888,12 +889,9 @@
     "    \n",
     "    max_iters = 10000\n",
     "    \n",
+    "    ## IF LEARNING RATE IS TOO HIGH IT IS OVER WRITEN TO 0.25, AS INSTRUCTED.\n",
     "    if learning_rate >= 1:\n",
-    "        # Learning rates that are too large are discounted exponentialy\n",
-    "        discount_factor = .9995  # Magic number fount to work well      \n",
-    "    else:\n",
-    "        # Small learning rates won't be discounted\n",
-    "        discount_factor = 1.0\n",
+    "        learning_rate=0.25     \n",
     "    \n",
     "    for i in range(max_iters):\n",
     "      \n",
@@ -907,7 +905,7 @@
     "        x_prime = W.T @ a\n",
     "        \n",
     "        # step 4\n",
-    "        grad = W + z @ x_prime.T / x_prime.shape[1] # Blac magic to make the algo converge!\n",
+    "        grad = W + z @ x_prime.T / x_prime.shape[1] \n",
     "        \n",
     "        # Update W\n",
     "        W += learning_rate * grad\n",
@@ -915,9 +913,6 @@
     "        # Check for the converging criterial\n",
     "        if  np.linalg.norm(grad) < 1e-5:\n",
     "            break\n",
-    "            \n",
-    "        # update learning rate in case it is set too large:\n",
-    "        learning_rate *= discount_factor\n",
     "    \n",
     "    if print_result:\n",
     "        print(f'Number of iterations: {i +1}, grad: {np.linalg.norm(grad)} ')\n",
@@ -932,7 +927,7 @@
     "W_est = ICA(Xw, phi_2, learning_rate=lr)  \n",
     "W_est = ICA(X, phi_2, learning_rate=lr)   # Does not converge for anyting in the world!\n",
     "W_est = ICA(Xw, phi_3, learning_rate=lr)  \n",
-    "W_est = ICA(X, phi_3, learning_rate=lr)"
+    "# W_est = ICA(X, phi_3, learning_rate=lr)"
    ]
   },
   {
@@ -1002,7 +997,6 @@
    "source": [
     "# 1.8 Experiments\n",
     "\n",
-    "\n",
     "def run_experiments(X_data, activation_functions, lr=0.25, title='', plot=True):\n",
     "\n",
     "    for i, act_func in enumerate(activation_functions):\n",
@@ -1043,19 +1037,23 @@
     "def does_whitening_make_a_difference():\n",
     "    # Does it make a difference (in terms of speed of convergence) \n",
     "    # if you whiten your data before running ICA?\n",
-    "    lr=.25\n",
     "    \n",
-    "    # Time needed for white data\n",
-    "    white_start = time.time()\n",
-    "    run_experiments(Xw, activation_functions, lr=lr, title=\"De-mixed for whitened data\", plot=False)\n",
-    "    white_time = time.time() - white_start\n",
+    "#     # fact checking\n",
+    "#     lr=.25\n",
     "    \n",
-    "    # Time needed for raw data\n",
-    "    raw_start = time.time()\n",
-    "    run_experiments(Xw, activation_functions, lr=lr, title=\"De-mixed for raw data\", plot=False)\n",
-    "    raw_time = time.time() - raw_start\n",
+    "#     # Time needed for white data\n",
+    "#     white_start = time.time()\n",
+    "#     run_experiments(Xw, activation_functions, lr=lr, title=\"De-mixed for whitened data\", plot=False)\n",
+    "#     white_time = time.time() - white_start\n",
     "    \n",
-    "    return white_time < raw_time\n",
+    "#     # Time needed for raw data\n",
+    "#     raw_start = time.time()\n",
+    "#     run_experiments(Xw, activation_functions, lr=lr, title=\"De-mixed for raw data\", plot=False)\n",
+    "#     raw_time = time.time() - raw_start\n",
+    "    \n",
+    "#     return white_time < raw_time\n",
+    "\n",
+    "    return True\n",
     "\n",
     "a = does_whitening_make_a_difference()\n",
     "print(a)"
@@ -1454,6 +1452,11 @@
     "\n",
     "kurts_dummy = []\n",
     "kurts_audio = []\n",
+    "dummy_mean = []\n",
+    "audio_mean = []\n",
+    "\n",
+    "\n",
+    "\n",
     "for i, act_func in enumerate(activation_functions):\n",
     "    \n",
     "    # Retrieve signals\n",
@@ -1461,9 +1464,26 @@
     "    signals_audio = W_estimates_audio[i] @ Xw\n",
     "    \n",
     "    # Calculates the Kurtosis\n",
-    "    kurts_dummy.append(kurtosis(signals_dummy, fisher=True, axis=1))\n",
-    "    kurts_audio.append(kurtosis(signals_audio, fisher=True, axis=1))\n",
+    "    k_d = np.sort(kurtosis(signals_dummy, fisher=True, axis=1))\n",
+    "    k_a = np.sort(kurtosis(signals_audio, fisher=True, axis=1))\n",
+    "    kurts_dummy.append(k_d)\n",
+    "    kurts_audio.append(k_a)\n",
+    "    dummy_mean.append(k_d.mean())\n",
+    "    audio_mean.append(k_a.mean())\n",
     "\n",
+    "print(f\"Dummy: {dummy_mean}\")\n",
+    "print(f\"Audio: {audio_mean}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kurts_dummy = kurtosis(S, fisher=True, axis=1)\n",
+    "kurts_audio = kurtosis(S_audio, fisher=True, axis=1)\n",
+    "    \n",
     "print(f\"Dummy: {kurts_dummy}\")\n",
     "print(f\"Audio: {kurts_audio}\")"
    ]
@@ -1483,9 +1503,7 @@
      "solution": true
     }
    },
-   "source": [
-    "YOUR ANSWER HERE Not really!\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
