--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -359,7 +359,19 @@
     }
    },
    "source": [
-    "The Measurements tend to look more like Gaussians. That is because we are multiplying a normal random matrix to the source $X = AS$. This is importat for ICA because we are interested in finding a matrix such that we can revert this process and recover the source matrix, $S = A^{-1}X$. "
+    "***\n",
+    "\n",
+    "**ANSWER:**\n",
+    "\n",
+    "***Comparing Source with Mixed distribution:*** We see that mixed distributions (measurements, $X = AS$) exhibit more Gaussian-like histograms. This is because of the Central Limit Theorem that states that when independent random variables are added, the resultant distribution tends to a normal distribution even if the original distributions were not normal. In our case, we mix 5 random distributions (weighted by $A$) and hence we observe similar behavior.\n",
+    "\n",
+    "***Mixed signals:*** The *random mixed signal* looks like Gaussian distribution the most. This is because $np.random.randn$ is used to generate the signal which internally actually uses the standard normal by default to do so. The *sine* and *triangle* mixed distributions come next and this is because they have similar smooth oscillations about $0$ with very less time at the peak values and most of the time spent in transitions. *Sawtooth* is third because of similar behavior but with drastic transitions. The *square* is last as it has 2 modes in original form and switches between them drastically thus spending most of the time at these peaks.\n",
+    "\n",
+    "***Source signals:*** The source signals exhibit the least Gaussian like behavior as they are all different distributions and have not been moxed yet for the Central Limit Theorem to apply.\n",
+    "\n",
+    "This is not suitable for ICA as the ICA algorithm works under the assumption that the source signals ***do not*** have a Gaussian distribution. \n",
+    "\n",
+    "***"
    ]
   },
   {
@@ -392,15 +404,102 @@
     }
    },
    "source": [
-    "$\\phi(a) = \\frac{\\partial}{\\partial a}\\ln p(a) \\Rightarrow p(a) \\propto \\exp(\\int \\phi(a) da)$\n",
+    "**ANSWER**\n",
     "\n",
-    "$p_0(a) \\propto \\exp(- \\int tanh(a) da) = \\exp(-\\ln(cosh(a)) = \\frac{1}{cosh(a)}$\n",
+    "***\n",
+    "We have,\n",
     "\n",
-    "$p_1(a) \\propto \\exp(\\int (-a + tanh(a))da) = \\exp(cosh(a) - \\frac{a^2}{2}) = cosh(a) \\exp(\\frac{a^2}{2})$\n",
+    "$\\phi(a)=\\frac{d}{d a} \\ln p(a)$ \n",
     "\n",
-    "$p_2(a) \\propto \\exp(-\\int a^3) = \\exp(- \\frac{a^4}{4})$\n",
+    "$\\Rightarrow \\int \\phi(a) da=\\ln p(a)$\n",
     "\n",
-    "$p_2(a) \\propto \\exp(-\\int \\frac{6a}{a^2 +5}) = \\exp(- 3\\ln(a^2 + 5)) = \\frac{1}{(a^2 + 5)^3}$"
+    "In general, we will also use the following results for the first two part solutions:\n",
+    "\n",
+    "$tanh(a) = \\frac{\\exp^a - \\exp^{-a}}{\\exp^a + \\exp^{-a}}$\n",
+    "$   =  \\frac{1 - \\exp^{-2a}}{1 + \\exp^{-2a}} $\n",
+    "\n",
+    "Substituting $y = \\exp^{-2a}$\n",
+    "\n",
+    "$\\Rightarrow a = \\frac{-1}{2} \\log y$\n",
+    "$\\Rightarrow \\frac{da}{dy} = \\frac{-1}{2y}$\n",
+    "$\\Rightarrow da = \\frac{-1}{2y} dy$\n",
+    "\n",
+    "Thus,\n",
+    "\n",
+    "$tanh(a) = \\frac{-1}{2} \\int \\frac{1 - y}{(1 + y)y}dy$\n",
+    "\n",
+    "***\n",
+    "\n",
+    "***\n",
+    "**1) $\\ \\ \\  \\phi_0(a)= -tanh(a)$**\n",
+    "\n",
+    "$\\Rightarrow \\int \\phi(a)da = -\\int tanh(a) da$\n",
+    "\n",
+    "$ =  \\frac{1}{2} \\int \\frac{1 - y}{(1 + y)y} dy$\n",
+    "\n",
+    "$ = \\frac{1}{2} \\int \\frac{1 + y - 2y}{(1 + y)y} dy$\n",
+    "\n",
+    "$ = \\frac{1}{2} \\int \\frac{1 + y}{(1 + y)y}dy - \\frac{1}{2} \\int \\frac{2y}{(1 + y)y}dy$\n",
+    "\n",
+    "$ = \\frac{1}{2} \\int \\frac{1}{y}dy - \\int \\frac{1}{(1 + y)}dy$\n",
+    "\n",
+    "$ = \\frac{1}{2} \\ln y - \\ln (1+y) + c$\n",
+    "\n",
+    "$ = -a - \\ln (1 + \\exp^{-2a}) + c$\n",
+    "\n",
+    "Thus,\n",
+    "\n",
+    "$\\ln p(a) = -a - \\ln (1 + \\exp^{-2a}) + c$\n",
+    "\n",
+    "$p(a) = \\exp{-a - \\ln (1 + \\exp^{-2a}) + c}$\n",
+    "\n",
+    "$p(a) = \\frac{\\exp^c} {\\exp^a \\cdot (1 + \\exp^{-2a})}$\n",
+    "\n",
+    "$p(a) \\propto \\frac{1} {\\exp^a \\cdot (1 + \\exp^{-2a})}$\n",
+    "\n",
+    "***\n",
+    "\n",
+    "***\n",
+    "**2) $\\ \\ \\  \\phi_1(a)= -a + tanh(a)$**\n",
+    "\n",
+    "$\\Rightarrow \\int \\phi(a)da = \\int -a da + \\int tanh(a) da$\n",
+    "\n",
+    "Following similar steps as above, we arrive at:\n",
+    "\n",
+    "$\\ln p(a) = -\\int a d a- (-a-\\ln (1+e^{-2 a})+c)=-\\frac{1}{2} a^{2}+a+\\ln (1+e^{-2 a})+c$\n",
+    "\n",
+    "Hence,\n",
+    "\n",
+    "$p(a) \\propto e^{-\\frac{1}{2} a^{2}+a}+e^{-\\frac{1}{2} a^{2}-a}$\n",
+    "\n",
+    "***\n",
+    "\n",
+    "***\n",
+    "**3)$\\ \\ \\  \\phi_2(a)= -a^3$**\n",
+    "\n",
+    "$\\Rightarrow \\int \\phi(a)da = \\int -a^3 da$\n",
+    "\n",
+    "$ = \\frac{-1}{4}a^4 + c$\n",
+    "\n",
+    "Thus,\n",
+    "\n",
+    "$p(a) \\propto \\exp^{\\frac {-1}{4}a^4}$\n",
+    "\n",
+    "***\n",
+    "\n",
+    "***\n",
+    "**4)$\\ \\ \\  \\phi_3(a)= - \\frac{6a}{a^2 + 5}$**\n",
+    "\n",
+    "$\\Rightarrow \\int \\phi(a)da = \\int-\\frac{6 a}{a^{2}+5} da$\n",
+    "\n",
+    "$ = -3\\int \\frac{2a}{a^2 + 5}da$\n",
+    "\n",
+    "$= -3\\ln |a^2+5|+c$\n",
+    "\n",
+    "Thus,\n",
+    "\n",
+    "$p(a) \\propto (a^2 + 5)^{-3}$\n",
+    "***"
    ]
   },
   {
@@ -576,7 +675,8 @@
      "points": 5,
      "schema_version": 3,
      "solution": true
-    }
+    },
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -598,6 +698,17 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "**ANSWER:**\n",
+    "\n",
+    "We see that all the activation funcitons correspond to priors that more or less look like the standard normal (Gaussian). These prior distributions correspond the most to the ***random*** source signal shape. Amongst the priors, the $p_0$ and $p_3$ look the most like a standrad Normal (due to their bell shape and the tail).\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -614,6 +725,18 @@
    "source": [
     "### 1.4 Whitening (15 points)\n",
     "Some ICA algorithms can only learn from whitened data. Write a method `whiten(X)` that takes a $M \\times T$ data matrix $\\mathbf{X}$ (where $M$ is the dimensionality and $T$ the number of examples) and returns a whitened matrix. If you forgot what whitening is or how to compute it, various good sources are available online, such as http://courses.media.mit.edu/2010fall/mas622j/whiten.pdf. Your function should also center the data before whitening."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "$cov[X] = \\frac{1}{n-1} \\sum_{i=1}^{n}\\left(x_{i}-\\overline{x}\\right)^{2}$, where $\\overline{x}=$ mean of x\n",
+    "\n",
+    "$\\mathbf{whitened(x)} = \\boldsymbol{\\Lambda}^{-1 / 2} \\boldsymbol{\\Phi}^{T} \\mathbf{x}$\n",
+    "\n",
+    "***"
    ]
   },
   {
@@ -722,40 +845,53 @@
    "source": [
     "### 1.5 Interpret results of whitening\n",
     "\n",
-    "def plot_data(data, title = ''):\n",
-    "    f, ax = plt.subplots(5, 5)\n",
-    "    f.set_figheight(15)\n",
-    "    f.set_figwidth(15)\n",
-    "    for i in range(5):\n",
-    "        for j in range(5):\n",
-    "            ax[i,j].set_title(f'{title} {i} x {j}')\n",
-    "            ax[i,j].scatter(data[i], data[j])\n",
-    "            ax[i,j].set_xticks([0])\n",
-    "            ax[i,j].set_yticks([0])\n",
-    "    plt.suptitle(title)\n",
-    "    plt.show()\n",
+    "mixtures = []\n",
+    "mix_whiten = []\n",
+    "scatter_colors = ['b' , 'r', 'g']\n",
     "\n",
-    "# Plot data.\n",
-    "plot_data(S, 'Signals')\n",
-    "plot_data(X, 'Measurements')\n",
-    "plot_data(Xw, 'Whitened')\n",
+    "for s in signals:\n",
+    "    mixtures.append(s+'_mix')\n",
+    "    mix_whiten.append(s+'_whitened')\n",
     "\n",
     "\n",
-    "# Plot covariance\n",
-    "f, (ax_s, ax_m, ax_w) = plt.subplots(1, 3)\n",
-    "f.set_figheight(6)\n",
-    "f.set_figwidth(20)\n",
+    "def plot_scatter(X, title, subtitles=[], count=0):\n",
+    "    \n",
+    "    dim = X.shape[0]\n",
+    "    f, axes = plt.subplots(dim, dim, figsize=(13, 13))\n",
+    "    f.suptitle(title + \"\\n\" + \"-\"*80, y=1.04)\n",
+    "    \n",
+    "    for row in range(dim):\n",
+    "        for col in range(dim):\n",
+    "            ax = axes[row,col]\n",
+    "            ax.scatter(X[row, :],X[col, :], s= 0.6, c= scatter_colors[count])\n",
+    "            ax.set_xlabel(subtitles[row])\n",
+    "            ax.set_ylabel(subtitles[col])\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    return None\n",
+    "    \n",
+    "    \n",
+    "def plot_covariance(X, title, labels=[]):\n",
+    "    \n",
+    "    f, ax = plt.subplots(1, figsize=(4, 4))\n",
+    "    f.suptitle(title + \"\\n\" + \"-\"*80, y=1.04)\n",
+    "    \n",
+    "    C = np.cov(X) \n",
+    "    ax.set_xticks([0,1,2,3,4])\n",
+    "    ax.set_xticklabels(labels,rotation = 30, horizontalalignment=\"right\")\n",
+    "    ax.set_yticks([0,1,2,3,4])\n",
+    "    ax.set_yticklabels(labels)\n",
+    "    ax = imshow(C, cmap='gray', interpolation='nearest')  \n",
     "\n",
-    "ax_s.set_title(\"Signal Covariance\")\n",
-    "ax_s.imshow(np.cov(S), cmap='gray', interpolation='nearest')\n",
+    "# Plotting Pairwise Scatterplots   \n",
+    "plot_scatter(S, 'Pairwise Source Signals Scatterplots', signals,0)\n",
+    "plot_scatter(X, 'Pairwise Measurements Scatterplots', mixtures,1)\n",
+    "plot_scatter(Xw, 'Pairwise Whitened Measurements Scatterplots', mix_whiten,2)\n",
     "\n",
-    "ax_m.set_title(\"Measurements Covariance\")\n",
-    "ax_m.imshow(np.cov(X), cmap='gray', interpolation='nearest')\n",
-    "\n",
-    "ax_w.set_title(\"White Measurements Covariance\")\n",
-    "ax_w.imshow(np.cov(Xw), cmap='gray', interpolation='nearest')\n",
-    "\n",
-    "plt.show()"
+    "# Plotting Pairwise Covariance\n",
+    "plot_covariance(S, \"Pairwise Source Signals Covariance\", signals)\n",
+    "plot_covariance(X, \"Pairwise Measurements Covariance\", mixtures)\n",
+    "plot_covariance(Xw, \"Pairwise Whitened Measurements Covariance\", mix_whiten)"
    ]
   },
   {
@@ -793,9 +929,17 @@
     }
    },
    "source": [
-    "The Whitened Measurements are uncorrelated, because the covariance is the identity matrix. However we cannot conclude they are independent. In other words, $\\Sigma = I$ is a necessary condition, but it is not sufficient.\n",
+    "***\n",
     "\n",
-    "The covariance matrix of the Signals and of the Measurements show correlations. The whitening process was successful in ereasing this correlation."
+    "**ANSWER:**\n",
+    "\n",
+    "The Whitened Measurements are de-correlated, because the covariance is the identity matrix. However we cannot conclude they are independent. In other words, $\\Sigma = I$ is a necessary condition, but it is not sufficient.\n",
+    "\n",
+    "The scatterplots before show clear linear correlation between measurement pairs. This is also confirmed from the covariance matrix that has patches (and/or shades) of white all over, where white denotes $1$ (highest correlation) and black denotes $0$ (no correlation). \n",
+    "\n",
+    "After whitening, we can see the scatter plots are all blobs with no apparent rotation visible. Even the covariance matrix has white patches only on the diagonals (obvious high correlation with self) and no correaltion with others (black everywhere).\n",
+    "\n",
+    "***"
    ]
   },
   {
@@ -926,7 +1070,7 @@
     "W_est = ICA(X, phi_1, learning_rate=lr)\n",
     "W_est = ICA(Xw, phi_2, learning_rate=lr)  \n",
     "W_est = ICA(X, phi_2, learning_rate=lr)   # Does not converge for anyting in the world!\n",
-    "W_est = ICA(Xw, phi_3, learning_rate=lr)  \n",
+    "# W_est = ICA(Xw, phi_3, learning_rate=lr)  \n",
     "# W_est = ICA(X, phi_3, learning_rate=lr)"
    ]
   },
@@ -1057,16 +1201,6 @@
     "\n",
     "a = does_whitening_make_a_difference()\n",
     "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "time.time()"
    ]
   },
   {
@@ -1450,37 +1584,6 @@
     "\n",
     "from scipy.stats import kurtosis\n",
     "\n",
-    "kurts_dummy = []\n",
-    "kurts_audio = []\n",
-    "dummy_mean = []\n",
-    "audio_mean = []\n",
-    "\n",
-    "\n",
-    "\n",
-    "for i, act_func in enumerate(activation_functions):\n",
-    "    \n",
-    "    # Retrieve signals\n",
-    "    signals_dummy = W_estimates[i] @ Xw\n",
-    "    signals_audio = W_estimates_audio[i] @ Xw\n",
-    "    \n",
-    "    # Calculates the Kurtosis\n",
-    "    k_d = np.sort(kurtosis(signals_dummy, fisher=True, axis=1))\n",
-    "    k_a = np.sort(kurtosis(signals_audio, fisher=True, axis=1))\n",
-    "    kurts_dummy.append(k_d)\n",
-    "    kurts_audio.append(k_a)\n",
-    "    dummy_mean.append(k_d.mean())\n",
-    "    audio_mean.append(k_a.mean())\n",
-    "\n",
-    "print(f\"Dummy: {dummy_mean}\")\n",
-    "print(f\"Audio: {audio_mean}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "kurts_dummy = kurtosis(S, fisher=True, axis=1)\n",
     "kurts_audio = kurtosis(S_audio, fisher=True, axis=1)\n",
     "    \n",
