Kurtosis added to merged file

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -416,17 +416,14 @@
     "In general, we will also use the following results for the first two part solutions:\n",
     "\n",
     "$tanh(a) = \\frac{\\exp^a - \\exp^{-a}}{\\exp^a + \\exp^{-a}}$\n",
-    "$   =  \\frac{1 - \\exp^{-2a}}{1 + \\exp^{-2a}} $\n",
     "\n",
-    "Substituting $y = \\exp^{-2a}$\n",
+    "Substituting $y = \\exp^{a} + \\exp^{-a}$\n",
     "\n",
-    "$\\Rightarrow a = \\frac{-1}{2} \\log y$\n",
-    "$\\Rightarrow \\frac{da}{dy} = \\frac{-1}{2y}$\n",
-    "$\\Rightarrow da = \\frac{-1}{2y} dy$\n",
+    "$\\Rightarrow da = \\frac{1}{2y} dy$\n",
     "\n",
     "Thus,\n",
     "\n",
-    "$tanh(a) = \\frac{-1}{2} \\int \\frac{1 - y}{(1 + y)y}dy$\n",
+    "$tanh(a) = \\frac{1}{y}dy$\n",
     "\n",
     "***\n",
     "\n",
@@ -435,27 +432,19 @@
     "\n",
     "$\\Rightarrow \\int \\phi(a)da = -\\int tanh(a) da$\n",
     "\n",
-    "$ =  \\frac{1}{2} \\int \\frac{1 - y}{(1 + y)y} dy$\n",
+    "$ =  - \\int \\frac{1}{y} dy$\n",
     "\n",
-    "$ = \\frac{1}{2} \\int \\frac{1 + y - 2y}{(1 + y)y} dy$\n",
+    "$ = -\\ln y + c$\n",
     "\n",
-    "$ = \\frac{1}{2} \\int \\frac{1 + y}{(1 + y)y}dy - \\frac{1}{2} \\int \\frac{2y}{(1 + y)y}dy$\n",
-    "\n",
-    "$ = \\frac{1}{2} \\int \\frac{1}{y}dy - \\int \\frac{1}{(1 + y)}dy$\n",
-    "\n",
-    "$ = \\frac{1}{2} \\ln y - \\ln (1+y) + c$\n",
-    "\n",
-    "$ = -a - \\ln (1 + \\exp^{-2a}) + c$\n",
+    "$ = -\\ln (\\exp^{a} + \\exp^{-a}) + c$\n",
     "\n",
     "Thus,\n",
     "\n",
-    "$\\ln p(a) = -a - \\ln (1 + \\exp^{-2a}) + c$\n",
+    "$\\ln p(a) = -\\ln (\\exp^{a} + \\exp^{-a}) + c$\n",
     "\n",
-    "$p(a) = \\exp{-a - \\ln (1 + \\exp^{-2a}) + c}$\n",
+    "$\\ln p(a) = -\\ln (2cosh a) + c$\n",
     "\n",
-    "$p(a) = \\frac{\\exp^c} {\\exp^a \\cdot (1 + \\exp^{-2a})}$\n",
-    "\n",
-    "$p(a) \\propto \\frac{1} {\\exp^a \\cdot (1 + \\exp^{-2a})}$\n",
+    "$p(a) = -cosh (a) + c$\n",
     "\n",
     "***\n",
     "\n",
@@ -466,11 +455,11 @@
     "\n",
     "Following similar steps as above, we arrive at:\n",
     "\n",
-    "$\\ln p(a) = -\\int a d a- (-a-\\ln (1+e^{-2 a})+c)=-\\frac{1}{2} a^{2}+a+\\ln (1+e^{-2 a})+c$\n",
+    "$\\ln p(a) = -\\int a da + \\ln cosh(a) + c$\n",
     "\n",
     "Hence,\n",
     "\n",
-    "$p(a) \\propto e^{-\\frac{1}{2} a^{2}+a}+e^{-\\frac{1}{2} a^{2}-a}$\n",
+    "$p(a) \\propto e^{-\\frac{1}{2} a^{2}} \\cdot cosh(a)$\n",
     "\n",
     "***\n",
     "\n",
@@ -882,6 +871,7 @@
     "    ax.set_yticks([0,1,2,3,4])\n",
     "    ax.set_yticklabels(labels)\n",
     "    ax = imshow(C, cmap='gray', interpolation='nearest')  \n",
+    "    return None\n",
     "\n",
     "# Plotting Pairwise Scatterplots   \n",
     "plot_scatter(S, 'Pairwise Source Signals Scatterplots', signals,0)\n",
@@ -935,7 +925,7 @@
     "\n",
     "The Whitened Measurements are de-correlated, because the covariance is the identity matrix. However we cannot conclude they are independent. In other words, $\\Sigma = I$ is a necessary condition, but it is not sufficient.\n",
     "\n",
-    "The scatterplots before show clear linear correlation between measurement pairs. This is also confirmed from the covariance matrix that has patches (and/or shades) of white all over, where white denotes $1$ (highest correlation) and black denotes $0$ (no correlation). \n",
+    "The scatterplots above show clear linear correlation between measurement pairs. This is also confirmed from the covariance matrix that has patches (and/or shades) of white all over, where white denotes $1$ (highest correlation) and black denotes $0$ (no correlation). \n",
     "\n",
     "After whitening, we can see the scatter plots are all blobs with no apparent rotation visible. Even the covariance matrix has white patches only on the diagonals (obvious high correlation with self) and no correaltion with others (black everywhere).\n",
     "\n",
@@ -1020,18 +1010,24 @@
      "locked": false,
      "schema_version": 3,
      "solution": true
-    }
+    },
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "### 1.7 Independent Component Analysis\n",
-    "def ICA(X, activation_function, learning_rate=0.25, print_result=True):\n",
+    "def ICA(X, activation_function, learning_rate=0.25, max_iters = 10000, print_result=True, w_init_type = 'qr'):\n",
     "    \n",
     "    # Initialize W as an orthogonal matrix\n",
     "    # This reduces the number of updates that is necessary.\n",
-    "    W, _ = np.linalg.qr(random_nonsingular_matrix(Xw.shape[0]))\n",
+    "    print(\"\\nRunning {} ...\\n\".format(activation_function))\n",
     "    \n",
-    "    max_iters = 10000\n",
+    "    if w_init_type == 'qr':\n",
+    "        W, _ = np.linalg.qr(random_nonsingular_matrix(Xw.shape[0]))\n",
+    "    elif w_init_type == 'random':\n",
+    "        W = np.random.randn(X.shape[0], X.shape[0])\n",
+    "    else:\n",
+    "        raise ValueError(\"[!] Error: invalid w_init_type argument !!\")\n",
     "    \n",
     "    ## IF LEARNING RATE IS TOO HIGH IT IS OVER WRITEN TO 0.25, AS INSTRUCTED.\n",
     "    if learning_rate >= 1:\n",
@@ -1050,27 +1046,32 @@
     "        \n",
     "        # step 4\n",
     "        grad = W + z @ x_prime.T / x_prime.shape[1] \n",
+    "        grad_norm = np.linalg.norm(grad.flatten())\n",
     "        \n",
     "        # Update W\n",
     "        W += learning_rate * grad\n",
     "        \n",
     "        # Check for the converging criterial\n",
-    "        if  np.linalg.norm(grad) < 1e-5:\n",
+    "        if  grad_norm < 1e-5:\n",
+    "            print(\"\\nGrad Norm went below 1e-5 or NaN!! Aborting..\\n\")\n",
     "            break\n",
     "    \n",
-    "    if print_result:\n",
-    "        print(f'Number of iterations: {i +1}, grad: {np.linalg.norm(grad)} ')\n",
+    "        if print_result:\n",
+    "            if i%500==0:\n",
+    "                print(\"Step: {},   Grad_norm = {}\".format(i, grad_norm))\n",
+    "    \n",
+    "    print(\"Total steps until termination = {}, Grad_norm = {}\\n\".format(i+1, grad_norm) + \"-\"*100)\n",
     "    \n",
     "    return W\n",
     "\n",
     "lr = .25\n",
     "W_est = ICA(Xw, phi_0, learning_rate=lr)  # Whitened measuement\n",
-    "W_est = ICA(X, phi_0, learning_rate=lr)   # raw measuerement\n",
+    "# W_est = ICA(X, phi_0, learning_rate=lr)   # raw measuerement\n",
     "W_est = ICA(Xw, phi_1, learning_rate=lr)  \n",
-    "W_est = ICA(X, phi_1, learning_rate=lr)\n",
+    "# W_est = ICA(X, phi_1, learning_rate=lr)\n",
     "W_est = ICA(Xw, phi_2, learning_rate=lr)  \n",
-    "W_est = ICA(X, phi_2, learning_rate=lr)   # Does not converge for anyting in the world!\n",
-    "# W_est = ICA(Xw, phi_3, learning_rate=lr)  \n",
+    "# W_est = ICA(X, phi_2, learning_rate=lr)   # Does not converge for anyting in the world!\n",
+    "W_est = ICA(Xw, phi_3, learning_rate=lr)  \n",
     "# W_est = ICA(X, phi_3, learning_rate=lr)"
    ]
   },
@@ -1140,24 +1141,32 @@
    "outputs": [],
    "source": [
     "# 1.8 Experiments\n",
+    "# print(\"=\"*100 + \"\\n\\t\\t\\t\\t Obtaining the W_estimates\\n\" + \"=\"*100)\n",
+    "# W_estimates = [ICA(Xw, activation_function=phi, learning_rate=0.25, w_init_type='random') for phi in activation_functions]\n",
+    "\n",
+    "# print(\"\\n\" +\"=\"*100 + \"\\n\\t\\t\\t\\t Reconstructing the Source signals\\n\" + \"=\"*100)\n",
+    "# for i in range(len(W_estimates)):\n",
+    "#     W_now = W_estimates[i]\n",
+    "#     s_obtained = W_now@Xw\n",
+    "#     plot_signals(s_obtained, \"Reconstructed signals using $\\phi_{}$\".format(i))\n",
     "\n",
     "def run_experiments(X_data, activation_functions, lr=0.25, title='', plot=True):\n",
     "\n",
     "    for i, act_func in enumerate(activation_functions):\n",
     "        W = ICA(X_data, act_func, learning_rate=lr, print_result=plot)\n",
     "        if plot:\n",
-    "            print(f\"Phi {i}: {title}\")\n",
-    "            plot_signals(W @ Xw, f\"Phi {i}: {title}\")\n",
+    "#             print(f\"Phi {i}: {title}\")\n",
+    "            plot_signals(W @ Xw, \"Reconstructed signals using $\\phi_{}$\".format(i))\n",
     "    \n",
     "\n",
     "lr =.25\n",
     "# Experiments on white data\n",
-    "print(\"################# White Data #################\")\n",
+    "print(\"\\n\\n\" +\"=\"*100 + \"\\n\\t\\t\\t\\t Reconstructing the Source signals\\n\" + \"=\"*100)\n",
     "run_experiments(Xw, activation_functions, lr=lr, title=\"De-mixed for whitened data\")\n",
     "\n",
-    "# Experiments on raw data\n",
-    "print(\"################# Raw Data #################\")\n",
-    "run_experiments(X, activation_functions, lr=lr, title=\"De-mixed for raw data\")"
+    "# # Experiments on raw data\n",
+    "# print(\"################# Raw Data #################\")\n",
+    "# run_experiments(X, activation_functions, lr=lr, title=\"De-mixed for raw data\")"
    ]
   },
   {
@@ -1606,6 +1615,30 @@
      "solution": true
     }
    },
+   "source": [
+    "***\n",
+    "**ANSWER:**\n",
+    "\n",
+    "Kurtosis measures the \"*peakedness*\" or \"*flatness*\" of a distribution relative to a normal distribution. Thus, we can infer the following from it:\n",
+    "1. A $Kurtosis = 0$: means the variable is Gaussian. \n",
+    "2. A $Kurtosis > 0$: the variable is called a super-Gaussian (ie, spiky pdf)\n",
+    "3. A $Kurtosis < 0$: the variable is called a sub-Gaussian (ie, flat pdf)\n",
+    "\n",
+    "In ICA we want signals that are not Gaussian (ie, Kurtosis of original signals should ideally be non-zero and further away from 0 are better). As seen in the cell above, all Kurtosis values are non-zero.\n",
+    "\n",
+    "*Dummy signals:* We observe that the Kurtosis values of the dummy signals are all negative and hence are sub-Gaussians. Thus priors that are also sub-Gaussians will work better for them. We can see this in **Experiment 1.8** section where $\\phi_1$ and $\\phi_2$ clearly work better than the other 2 in retrieving the original Dummy signals.\n",
+    "\n",
+    "*Audio Signals:* We observe that the Kurtosis values of the audio signals are all positive and hence are super-Gaussians. Thus priors that are super-Gaussians will work better for them. We can see this in the **Section 1.9** (from the retrieved signal plots and the produced audios) where $\\phi_0$ and $\\phi_3$ clearly work better than the other 2 in retriving the original Audio Signals.\n",
+    "\n",
+    "Thus, we see a direct correlation between the Kurtosis values of the Source Signals and that of the priors. Priors with positive Kurtosis values should be used for signals that have positive Kurtosis values and same holds for negative values.\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
